# ansible-role-cogni-ai-agent

./: .ansible-lint  .cursorignore  .gitignore  .lycheeignore  .pre-commit-config.yaml  AGENTS.md  KNOWN_ISSUES.md  LICENSE  README.md  ansible.cfg  galaxy.yml  pyproject.toml  requirements-local.yml.j2  requirements.yml
.devcontainer/: devcontainer.json  requirements.txt
.github/: AGENTS.md  CODEOWNERS  FIREWALL.md  copilot-instructions.md  mcp-config.json
.github/prompts/: AGENTS.md  README.md  default.prompt.yml  pr-review.prompt.md  repository-setup.prompt.md  test.prompt.yml
.github/workflow-templates/: README.md  codeql-analysis.yml
.github/workflows/: AGENTS.md  README.md  check.yml  cogni-ai-agent.yml  copilot-setup-steps.yml  devcontainer-ci.yml  molecule.yml  test.yml
.tours/: README.md  getting-started.tour
meta/: main.yml
module_utils/: ai_inference_common.py
molecule/: requirements.txt
molecule/default/: converge.yml  create.yml  destroy.yml  molecule.yml  prepare.yml  verify.yml
molecule/devel/: molecule.yml
molecule/resources/playbooks/: Dockerfile.cogni-ai-agent-on-nixos  Dockerfile.j2  Dockerfile.template-on-nixos
plugins/modules/: ai_inference_chat.py
roles/cogni_ai_agent/meta/: main.yml
roles/cogni_ai_agent/tasks/: Debian.yml  NixOS.yml
tasks/: Debian.yml  NixOS.yml  deps.yml  main.yml  python.yml  verify.yml
tests/: test.yml
tests/inventory/: docker-containers.yml
tests/playbooks/: docker-containers.yml
tests/playbooks/tags/: verify.yml
tests/vars/: main.yml
vars/: main.yml
(+1 files in other folders)
