# Example pyproject for cogni-ai-agent role; update description, author info, and metadata for your project.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ansible-role-cogni-ai-agent"
version = "0.1.0"
description = "Cogni AI Agent role for Ansible."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "tabulate>=0.9.0",
  "PyYAML>=6.0.1",
]

authors = [
  { name = "Cogni AI" },
]

[project.urls]
Homepage = "https://github.com/Cogni-AI-OU/ansible-role-cogni-ai-agent"
Repository = "https://github.com/Cogni-AI-OU/ansible-role-cogni-ai-agent"
